fix: changed gaps for cards

--- a/pages/pets/pets.css
+++ b/pages/pets/pets.css
@@ -142,8 +142,6 @@ body.lock {
 .pets {
     display: flex;
     flex-flow: wrap;
-    column-gap: 40px;
-    row-gap: 30px;
     top: 0px;
     width: 1200px;
     height: 910px;
@@ -153,6 +151,8 @@ body.lock {
 .card {
     width: 270px;
     height: 435px;
+		margin-right: 40px;
+    margin-bottom: 30px;
     background: #FAFAFA;
     border-radius: 9px;
     display: flex;
@@ -448,7 +448,6 @@ body.lock {
     .pets {
         width: 580px;
         height: 1365px;
-        row-gap: 30px;
     }
     .pagination-block {
         top: 1400px;
@@ -589,7 +588,6 @@ body.lock {
     .pets {
         height: 1365px;
         width: 270px;
-        row-gap: 30px;
     }
     .pagination-block {
         top: 1400px;
@@ -763,7 +761,6 @@ body.lock {
     .pets {
         height: 1365px;
         width: 270px;
-        row-gap: 30px;
     }
     .pagination-block {
         top: 1400px;
